# logslice

./: .gitignore  README.md  setup.cfg
docs/: bookmark.md  column.md  context.md  dedup.md  diff.md  enrich.md  grep.md  highlight.md  join.md  label.md  mask.md  pivot.md  rate.md  redact.md  rollup.md  score.md  session.md  stats.md  tail.md  template.md  threshold.md  transform.md  unique.md  validate.md  window.md
logslice/: __main__.py  aggregator.py  annotate.py  batch.py  bookmark.py  cast.py  cli.py  cli_batch.py  cli_column.py  cli_context.py  cli_dedup.py  cli_diff.py  cli_enrich.py  cli_frequency.py  cli_join.py  cli_label.py  cli_limit.py  cli_mask.py  cli_merge.py  cli_rename.py  cli_resample.py  cli_rollup.py  cli_score.py  cli_session.py  cli_sort.py  cli_split.py  cli_tail.py  cli_template.py  cli_threshold.py  cli_unique.py  cli_validate.py  cli_window.py  cluster.py  coalesce.py  column.py  compare.py  context.py  dedup.py  diff.py  enrich.py  (+41 more)
tests/: test_aggregator.py  test_batch.py  test_bookmark.py  test_cast.py  test_cli.py  test_cli_column.py  test_cli_context.py  test_cli_dedup.py  test_cli_enrich.py  test_cli_mask.py  test_cli_rollup.py  test_cli_sort.py  test_cli_tail.py  test_cli_template.py  test_cli_window.py  test_cluster.py  test_coalesce.py  test_column.py  test_compare.py  test_context.py  test_dedup.py  test_diff.py  test_enrich.py  test_excerpt.py  test_explode.py  test_filters.py  test_flatten.py  test_frequency.py  test_grep.py  test_highlight.py  test_join.py  test_label.py  test_limit.py  test_mask.py  test_merge.py  test_output.py  (+24 more)
