[metadata]
name = logslice
version = 0.1.0
description = CLI tool to filter and slice structured log files by time range and field patterns
long_description = file: README.md
long_description_content_type = text/markdown
author = logslice contributors
license = MIT
python_requires = >=3.9

[options]
packages = logslice

[options.entry_points]
console_scripts =
    logslice = logslice.cli:main

[options.extras_require]
dev =
    pytest>=7
    pytest-cov

[tool:pytest]
testpaths = tests
